--- a/app.json
+++ b/app.json
@@ -7,21 +7,21 @@
     "stack": "container",
     "env": {
         "SESSION_NAME": {
-            "description": "اكتب هنا كود بايروجرام , يرجى ملاحظة ان علبك استخراجة من موقع القناة حصرا https://replit.com/@freedomSource/Session-Generator#main.py",
+            "description": "اكتب هنا كود بايروجرام ‹ تيرمكس › ",
             "required": true
         },
         "OWNER_ID": {
-            "description": "اكتب ايدي مالك البوت ، او اتركها كما هي",
+            "description": "اكتب ايدي مالك البوت او اتركها كما هي",
             "required": true,
             "value": "6377496746"
         },
         "ASSID": {
-            "description": "اكتب ايدي حساب المساعد ",
+            "description": "هنا اكتب ايدي حساب المساعد ",
             "required": true,
             "value": ""
         },
         "BG_IMG": {
-            "description": "يفضل تركها كما هي ، ضع هنا رابط صورة تلكراف يضهر عند تشغيل الاغنية ",
+            "description": "يفضل تركها كما هي ، ضع هنا رابط صورة تليجراف عند تشغيل الاغنية ",
             "required": true,
             "value": "https://graph.org/file/061951daec85b0f94b83c.jpg"
         },
@@ -36,7 +36,7 @@
             "value": ""
         },
         "BOT_ID": {
-            "description": "اكتب هنا ايدي البوت",
+            "description": "اكتب هنا ايدي بوتك ",
             "required": true,
             "value": ""
         },
@@ -46,50 +46,50 @@
             "value": ""
         },
         "SUPPORT": {
-            "description": "اكتب هنا قناة الدعم او اتركها كما هي",
+            "description": "اكتب هنا قناة الدعم او اتركها كما هو",
             "required": true,
             "value": "Tbiix"
         },
         "UPDATE": {
-            "description": "اكتب هنا قناة المطور او اتركها كما هي",
+            "description": "اكتب هنا قناة المطور او اتركها كما هو",
             "required": true,
             "value": "Tbiix"
         },
         "OWNER_USERNAME": {
-            "description": "اكتب هنا يوزر المطور او المالك",
+            "description": "اكتب هنا يوزر المطور او مالك البوت",
             "required": true,
             "value": "nnnnnnnnnr"
         },
         "START_PIC": {
-            "description": "ضع رابط صورة تلكراف يضهر لكليشة ستارت",
+            "description": "ضع رابط صورة تليجراف لرؤية كليشة الاستارت ، او اتركها كما هو",
             "value": "https://te.legra.ph/file/466de30ee0f9383c8e09e.jpg",
             "required": true
             
         },
         "API_ID": {
-            "description": "لاتغيرها ابدا",
+            "description": "انجب ولتلعب بيها ",
             "required": true,
-            "value": "8934899"
+            "value": "19921316"
         },
         "API_HASH": {
-            "description": "لاتغيرها ابدا",
+            "description": "انجب ولتلعب بيها",
             "required": true,
-            "value": "bf3e98d2c351e4ad06946b4897374a1e"
+            "value": "121bfb32fedd296a5bb44366a3df59d6"
         },
         "SUDO_USERS": {
-            "description": "اكتب هنا ايديات المطورين او اتركها كما هي .",
+            "description": "اكتب هنا ايديات المطورين او يفضل تركها كما هو .",
             "required": true,
             "value": "6377496746"
         },
         "BOT_TOKEN": {
-            "description": "اكتب توكن البوت ",
+            "description": "هنا اكتب توكن بوتك ",
             "required": true,
             "value": ""
         },
         "MONGO_DB_URI": {
-            "description": "لاتغيرها ابدا ابدا",
+            "description": "اكتب هنا قاعدة البيانات ، او اتركها كما هي افضل .",
             "required": true,
-            "value": "mongodb+srv://Cloner:Cloner@cluster0.cgc6t.mongodb.net/?retryWrites=true&w=majority"
+            "value": "postgres://qowwvprm:dUK0FQvYU0z1DgrfQN8nh6VZo_wd9ujK@stampy.db.elephantsql.com/qowwvprm"
             
         }
     },
